# LZW

./: Cargo.toml  test.comp
src/: lib.rs  main.rs
tests/: lzw_test.rs
