[package]
name = "lzw"
version = "0.1.0"
authors = ["joseildo filho <joseildofilho@yahoo.com.br>"]
edition = "2018"

[dependencies]
bit-long-vec = {git = "https://github.com/joseildofilho/bit-long-vec"}
serde = {version="1.0.104", features=["derive"]}
serde_json = "1.0.45"
serde_yaml = "0.8.11"
rand = "0.7.3"